dsp-cli/tests/snapshots/data_model_structure_snapshots__data_model_structure_csv_stderr.snap
---
source: tests/data_model_structure_snapshots.rs
expression: stderr
---
[anonymous on https://api.dasch.swiss]
