dsp-cli/tests/snapshots/data_model_structure_snapshots__data_model_structure_json_zero_relations.snap
---
source: tests/data_model_structure_snapshots.rs
expression: out
---
{"_meta":{"server":"https://api.dasch.swiss","auth":"anonymous","exit_code":0},"data":[]}
