dsp-cli/tests/snapshots/data_model_structure_snapshots__data_model_structure_lines_stdout.snap
---
source: tests/data_model_structure_snapshots.rs
expression: stdout
---
letter	Book	link	cites
letter	person	link	hasSender
letter	writtenSource	inherits	
manuscript	person	link	hasAuthor
manuscript	writtenSource	inherits
