dsp-cli/tests/snapshots/data_model_structure_snapshots__data_model_structure_prose_cross_model_heavy.snap
---
source: tests/data_model_structure_snapshots.rs
expression: out
---
Structure: beol  (4 relations)

  letter   → Book [to biblio]          cites                [link]
  letter   → Manuscript [to leibniz]   refersToManuscript   [link]
  letter   → Edition                   hasEdition           [link]
  person   → Institution [to newton]   worksAt              [link]

[anonymous on https://api.dasch.swiss]
