dsp-cli/tests/snapshots/data_model_structure_snapshots__data_model_structure_prose_full.snap
---
source: tests/data_model_structure_snapshots.rs
expression: out
---
Structure: beol  (5 relations)

  letter       → Book [to biblio]   cites       [link]
  letter       → person             hasSender   [link]
  letter       → writtenSource                  [inherits]
  manuscript   → person             hasAuthor   [link]
  manuscript   → writtenSource                  [inherits]

[anonymous on https://api.dasch.swiss]
