dsp-cli/tests/snapshots/data_model_structure_snapshots__data_model_structure_prose_zero_relations.snap
---
source: tests/data_model_structure_snapshots.rs
expression: out
---
Structure: minimal  (0 relations)

[anonymous on https://api.dasch.swiss]
